Fixed error with plugins without hyphens not getting called.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	</head>
 	<body>
 		<div class="required" data-content='{"content":"This is content from the html tag"}' data-name="joey" data-params='{"content":"This is the content that will fill the tag"}'></div>
-		<div id="container" data-camel-case='{"content": "this is camelCase content"}' data-params='{"content":"This is the content that will fill the tag"}'></div>
+		<div id="container" data-params='{"content":"This is the content that will fill the tag"}'></div>
+		<div data-camel-case='{"content": "this is camelCase content"}'></div>
 	</body>
 </html>
