Changing logic for checking if a plugin exists or a loader callback exists

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 		<div class="required" data-content='{"content":"This is content from the html tag"}' data-name="joey" data-params='{"content":"This is the content that will fill the tag"}'></div>
 		<div id="container" data-params='{"content":"This is the content that will fill the tag"}'></div>
 		<div data-camel-case='{"content": "this is camelCase content"}'></div>
-		<div date-casecamel='{"content": "this is a non hypenated camelCase attribute"}'></div>
+		<div data-casecamel='{"content": "this is a non hypenated camelCase attribute"}'></div>
 	</body>
 </html>
