--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<script src="params.js" type="text/javascript"></script>
 		<script src="content.js" type="text/javascript"></script>
 		<script src="camelCase.js" type="text/javascript"></script>
+		<script src="caseCamel.js" type="text/javascript"></script>
 		<script src="scripts.js" type="text/javascript"></script>
 	</head>
 	<body>
