--- a/test/index.html
+++ b/test/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>jQuery Selector Test</title>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js" type="text/javascript"></script>
-		<script src="../jquery.pluginLoader.js" type="text/javascript"></script>
+		<script src="../jquery.applicator.js" type="text/javascript"></script>
 		<script src="params.js" type="text/javascript"></script>
 		<script src="content.js" type="text/javascript"></script>
 		<script src="camelCase.js" type="text/javascript"></script>
